增加 category model
